--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "supertest": "^6.1.3",
     "webpack": "^5.21.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
